# dimagi-clockify-cli

./: README.rst  pyproject.toml
dimagi_clockify_cli/: db.py  main.py  services.py
