[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dimagi-clockify-cli"
version = "0.1.0"
description = "A Clockify command line interface, for the way Dimagi uses it."
authors = [
    { name="Norman Hooper", email="nhooper@dimagi.com" },
]
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "aiosqlite",
    "PyYAML",
    "sqlmodel",
    "typer[all]",
    "requests",
]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.scripts]
dcl = "dimagi_clockify_cli.main:app"

[project.urls]
"Homepage" = "https://github.com/kaapstorm/dimagi-clockify-cli"
"Bug Tracker" = "https://github.com/kaapstorm/dimagi-clockify-cli/issues"
